# SwissLP

./: .gitignore  CONFIGURATION.md  Containerfile  DOCKER.md  Dockerfile  README.md  docker-compose.yml  flake.nix  pyproject.toml  pytest.ini  requirements.txt  result  xml_r.ipynb
configs/: ast.yaml  german_bert.yaml  german_bert_optimized.yaml  swissbert.yaml  swissbert_optimized.yaml  wav2vec2.yaml  xlm_roberta.yaml
docs/: class_weights_usage.md  mlflow_setup.md
notebooks/: GeneralGermanBERT.ipynb  SwissGermanBERT.ipynb  Wav2Vec.ipynb  dataset_exploration.ipynb
scripts/: check_mlflow_runs.py  check_versions.py  flush_gpu.py  hard_wipe_mlflow_db.py  optimize_models.py  run_in_container.sh  test_text_models_training.py
src/config/: __init__.py  config.py
src/evaluation/: __init__.py  evaluator.py  metrics.py  visualizations.py
src/models/: __init__.py  speech_models.py  text_models.py
src/notebooks/: AST.ipynb  GeneralGermanBERT.ipynb  SwissGermanBERT.ipynb  Wav2Vec.ipynb  XLM-RoBERTa.ipynb  byt5.ipynb  fastText.ipynb  xml_r(1).ipynb
src/training/: __init__.py  hyperparameter_tuning.py  model_cleanup.py  optimization.py  trainer.py
src/utils/: __init__.py  constants.py  data_loader.py  dataset.py  device.py  logging_utils.py  mlflow_utils.py  prepare_dataset.py
tests/: __init__.py  conftest.py  test_config.py  test_data_loader.py  test_dataset.py  test_evaluation.py  test_speech_models.py  test_text_models.py  test_training.py  test_utils.py
